--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js",
+    "homepage": "https://github.com/myusername/my-app"
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-gh-pages": "^1.6.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
